PG (add paymentGateway controller + add inquiry func)
